--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,12 @@
 name: HangFire
 markdown: redcarpet
 pygments: true
+
+navigation:
+- text: Features
+  url: /features/
+- text: Fork me on GitHub
+  url: https://github.com/odinserj/HangFire
+
+kramdown:
+  input: GFM
