--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ navigation:
   url: http://docs.hangfire.io/en/latest/tutorials/index.html
 - text: Packages
   url: https://www.nuget.org/packages?q=HangFire
-- text: Fork me on GitHub
+- text: Sources
   url: https://github.com/odinserj/HangFire
 
 kramdown:
