--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,19 @@
 name: Hangfire
 
 # For Windows environment
-# highlighter: rouge
+highlighter: rouge
 
 # For other environments (Linux, OS X, etc.)
-pygments: true
-markdown: redcarpet
+# pygments: true
+# markdown: redcarpet
 
 kramdown:
   input: GFM
 
-github_repo_root: https://github.com/HangfireIO/HangfireIO.github.io
+github_repo: https://github.com/HangfireIO/HangfireIO.github.io
+
+paginate: 5
+paginate_path: "blog/page:num/"
+
+disqus_short_name: odinserjnet
+disqus_show_comment_count: true
