Add role attribute for products page

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 name: Hangfire
 
 # For Windows environment
-# highlighter: rouge
+highlighter: rouge
 
 # For other environments (Linux, OS X, etc.)
-pygments: true
-markdown: redcarpet
+# pygments: true
+# markdown: redcarpet
 
 kramdown:
   input: GFM
