--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ kramdown:
   input: GFM
 
 github_repo: https://github.com/HangfireIO/HangfireIO.github.io
+github_branch: master
 
 paginate: 5
 paginate_path: "blog/page:num/"
