--- a/_config.yml
+++ b/_config.yml
@@ -16,5 +16,5 @@ github_branch: master
 paginate: 5
 paginate_path: "blog/page:num/"
 
-disqus_short_name: odinserjnet
+disqus_short_name: hangfire
 disqus_show_comment_count: true
