--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,15 @@ author:
   name: 'odinserj'
   url:  https://twitter.com/odinserj
 
+# Windows environments
+# highlighter: rouge
+
+# Other environments
+markdown: redcarpet
+pygments: true
+
 redcarpet:
   extensions: ["no_intra_emphasis", "autolink", "tables", "with_toc_data"]
-
-highlighter: rouge
 
 github_repo:   https://github.com/HangfireIO/HangfireIO.github.io
 github_branch: master
