Turn on fenced code blocks

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ markdown: redcarpet
 pygments: true
 
 redcarpet:
-  extensions: ["no_intra_emphasis", "autolink", "tables", "with_toc_data"]
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 
 github_repo:   https://github.com/HangfireIO/HangfireIO.github.io
 github_branch: master
