--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,12 @@ author:
   name: 'odinserj'
   url:  https://twitter.com/odinserj
 
+github_repo:   https://github.com/HangfireIO/HangfireIO.github.io
+github_branch: master
+
+disqus_short_name:         hangfire
+disqus_show_comment_count: true
+
 # Windows environments
 # highlighter: rouge
 
@@ -13,14 +19,10 @@ kramdown:
   auto_ids: true
   input:    GFM
 
-github_repo:   https://github.com/HangfireIO/HangfireIO.github.io
-github_branch: master
+permalink: /blog/:year/:month/:day/:title.html
 
 paginate:      5
 paginate_path: "blog/page:num/"
-
-disqus_short_name:         hangfire
-disqus_show_comment_count: true
 
 gems:
   - jekyll-redirect-from
