Use site.title instead of site.name

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-name: Hangfire
+title: Hangfire
+description: Incredibly easy way to perform fire-and-forget, delayed and recurring tasks inside ASP.NET applications.
 url: http://hangfire.io
 
 author:
