--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -47,6 +47,10 @@
     - name: Hangfire.SQLite
       url: https://github.com/vip32/Hangfire.SQLite
       author: vip32
+      
+    - name: Hangfire.RavenDB
+      url: https://github.com/axial/hangfire-ravendb
+      author: AndrewMarkley
   
 - name: IoC Containers
   description: These projects simplify the integration between Hangfire and
