Add well-known customer

--- a/_data/customers.yml
+++ b/_data/customers.yml
@@ -9,6 +9,10 @@
 - title: Xamarin
   img: xamarin.png
   url: http://xamarin.com
+
+- title: Microsoft
+  img: ms.png
+  url: http://microsoft.com
   
 - title: Price Travel
   img: pricetravel.png
