--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,12 @@ defaults:
       layout: "post"
       comments: true
       active: blog
+  -
+    scope: 
+      path: ""
+      type: "drafts"
+    values:
+      layout: "post"
 
 gems:
   - jekyll-redirect-from
