Set correct author for Hangfire.Raven
Changed from individual to organization

--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -48,8 +48,8 @@
       author: vip32
       
     - name: Hangfire.Raven
-      url: https://github.com/axial/hangfire-ravendb
-      author: AndrewMarkley
+      url: https://github.com/cady-io/hangfire-ravendb
+      author: cady-io
   
 - name: IoC Containers
   description: These projects simplify the integration between Hangfire and
