--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -14,6 +14,11 @@
       description: Role/claims-based and basic authorization for Dashboard
       url: https://github.com/HangfireIO/Hangfire.Dashboard.Authorization
       author: HangfireIO
+      
+    - name: Hangfire.Dashboard.Dark
+      description: Shows the hangfire dashboard in a beautiful dark theme
+      url: https://github.com/vip32/Hangfire.Dashboard.Dark
+      author: vip32
     
 - name: Storages
   description: The following projects enable you to use your favorite storage.
