--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -70,6 +70,10 @@
     - name: Hangfire.SQLite
       url: https://github.com/vip32/Hangfire.SQLite
       author: vip32
+      
+    - name: Hangfire.Firebase
+      url: https://github.com/imranmomin/Hangfire.Firebase
+      author: imranmomin
   
 - name: IoC Containers
   description: These projects simplify the integration between Hangfire and
