Change repo and author for the Hangfire.SQLite package

--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -72,8 +72,8 @@
       author: cady-io
       
     - name: Hangfire.SQLite
-      url: https://github.com/vip32/Hangfire.SQLite
-      author: vip32
+      url: https://github.com/wanlitao/HangfireExtension
+      author: wanlitao
   
 - name: IoC Containers
   description: These projects simplify the integration between Hangfire and
