--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -9,6 +9,11 @@
       description: Job console extension for Hangfire
       url: https://github.com/pieceofsummer/Hangfire.Console
       author: pieceofsummer
+      
+    - name: Hangfire.Core.Dashboard.Management
+      description: Adds a management dashboard to manually queue jobs.
+      url: https://github.com/tracstarr/Hangfire.Core.Dashboard.Management
+      author: tracstarr
   
     - name: Hangfire.Dashboard.Authorization
       description: Role/claims-based and basic authorization for Dashboard
