--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Hangfire
 description: "An easy way to perform background processing in .NET and .NET Core applications. No separate process required, uses persistent storage."
-url: https://hangfire.io
+url: https://www.hangfire.io
 cdn: 
 
 author:
