--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,11 @@ paginate:      5
 paginate_path: "blog/page:num/"
 
 defaults:
+  -   
+   scope:
+     type: "pages"
+   values:
+     permalink: /:path/:basename:output_ext
   -
     scope: 
       path: ""
