added Hangfire.AzureDocumentDB under a storage
a new storage provider for Hangfire - Hangfire.AzureDocumentDB

--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -40,6 +40,10 @@
       url: https://github.com/HangfireIO/Hangfire.Azure.ServiceBusQueue
       author: barclayadam
 
+    - name: Hangfire.AzureDocumentDB
+      url: https://github.com/imranmomin/Hangfire.AzureDocumentDB
+      author: imranmomin
+      
     - name: Hangfire.CompositeC1
       url: https://github.com/burningice2866/Hangfire.CompositeC1
       author: burningice2866
