--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -83,6 +83,10 @@
     - name: Hangfire.SQLite
       url: https://github.com/wanlitao/HangfireExtension
       author: wanlitao
+      
+    - name: Hangfire.LiteDB
+      url: https://github.com/codeyu/Hangfire.LiteDB
+      author: codeyu 
   
 - name: IoC Containers
   description: These projects simplify the integration between Hangfire and
