--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -29,6 +29,11 @@
       description: Build RecurringJob automatically
       url: https://github.com/icsharp/Hangfire.RecurringJobExtensions
       author: icsharp
+      
+    - name: Hangfire.MaximumConcurrentExecutions
+      description: Throttle the number of concurrent jobs
+      url: https://github.com/alastairtree/Hangfire.MaximumConcurrentExecutions
+      author: alastairtree
     
 - name: Storages
   description: The following projects enable you to use your favorite storage.
