--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -50,6 +50,11 @@
       url: https://github.com/Nevets82/Hangfire.Extensions.Configuration
       author: nevets82
     
+    - name: Hangfire.StackTrace
+      description: Improved stack traces rendering for failed jobs
+      url: https://github.com/pieceofsummer/Hangfire.StackTrace
+      author: pieceofsummer
+    
     - name: Hangfire.Tags
       description: Makes it possible to add tags to jobs, and filter jobs based on these tags.
       url: https://github.com/face-it/Hangfire.Tags
