--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -174,6 +174,10 @@
     - name: Hangfire.SpringNet
       url: https://github.com/imranmomin/Hangfire.SpringNet
       author: imranmomin
+
+    - name: Hangfire.Stashbox
+      url: https://github.com/z4kn4fein/stashbox-hangfire
+      author: z4kn4fein
       
     - name: Hangfire.StructureMap
       url: https://github.com/cocowalla/Hangfire.StructureMap
