--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -25,6 +25,11 @@
       url: https://github.com/vip32/Hangfire.Dashboard.Dark
       author: vip32
 
+    - name: Hangfire.Dashboard.Management
+      description: Adds a management dashboard to manually queue jobs.
+      url: https://github.com/mccj/Hangfire.Core.Dashboard.Management
+      author: mccj
+
     - name: Hangfire.Heartbeat
       description: Server utilization monitoring for Hangfire
       url: https://github.com/ahydrax/Hangfire.Heartbeat
