--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -14,6 +14,11 @@
       description: Adds a management dashboard to manually queue jobs.
       url: https://github.com/tracstarr/Hangfire.Core.Dashboard.Management
       author: tracstarr
+      
+    - name: Hangfire.Correlate
+      description: Adds correlation id support through integration with Correlate.
+      url: https://github.com/skwasjer/Hangfire.Correlate
+      author: skwasjer
   
     - name: Hangfire.Dashboard.Authorization
       description: Role/claims-based and basic authorization for Dashboard
