Add Hv.Hangfire.SqlServer.Memory (#59)

--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -126,6 +126,10 @@
       url: https://github.com/arnoldasgudas/Hangfire.MySqlStorage
       author: arnoldasgudas
       
+    - name: Hv.Hangfire.SqlServer.Memory
+      url: https://github.com/minhhungit/Hv.Hangfire.SqlServer.Memory
+      author: minhhungit
+
     - name: Hangfire.Storage.MySql
       description: Fork of Hangfire.MySqlStorage addressing deadlocks and performance issues
       url: https://github.com/MiloszKrajewski/Hangfire.Storage.MySql
