--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -174,6 +174,11 @@
     - name: Hangfire.SQLite
       url: https://github.com/wanlitao/HangfireExtension
       author: wanlitao
+      
+    - name: Hangfire.Storage.SQLite
+      description: An Alternative SQLite Storage for Hangfire.
+      url: https://github.com/raisedapp/Hangfire.Storage.SQLite
+      author: felixclase         
 
 - name: IoC Containers
   description: These projects simplify the integration between Hangfire and
