--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -88,7 +88,7 @@
     - name: Hangfire.Tags
       description: Makes it possible to add tags to jobs, and filter jobs based on these tags.
       url: https://github.com/face-it/Hangfire.Tags
-      author: faceit
+      author: face-it
       
     - name: Hangfire.RecurringJobAdmin
       description: A simple dashboard to manage Hangfire's recurring jobs.
