--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -74,6 +74,11 @@
       description: Build RecurringJob automatically
       url: https://github.com/icsharp/Hangfire.RecurringJobExtensions
       author: icsharp
+          
+    - name: Hangfire.TopicExtensions
+      description: Build Topic based Subscriber Jobs
+      url: https://github.com/jmarbutt/HangFire.TopicExtensions
+      author: jmarbutt
       
     - name: Hangfire.RecurringJobCleanUpManager
       description: Auto clean jobs that are not in the code
