--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -124,6 +124,11 @@
       description: ApplicationInsights integration to track Jobs as Operations.
       url: https://github.com/coolhome/Hangfire.Extensions.ApplicationInsights
       author: coolhome
+      
+    - name: TransactHangfire
+      description: TransactionScope filter wrapper for Hangfire jobs.
+      url: https://github.com/dalrankov/TransactHangfire
+      author: dalrankov
 
 - name: Storages
   description: The following projects enable you to use your favorite storage.
